fix: align contact to center

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@ ul a{
 	text-decoration: none;
 	display: inline-block;
 	width: 160px;
+  text-align: center;
 }
 ul a:hover {
 	background-color: #292D39;
@@ -36,7 +37,6 @@ ul a:hover {
 }
 .content{
 	display: block;
-	width: 1024px;
 }
 
 .top {
@@ -44,8 +44,7 @@ ul a:hover {
 }
 
 .logo {
-	padding-top: 30px;
-	padding-left: 10px;
+	padding: 30px 0px;
 }
 
 .menu {
